--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -55,7 +55,7 @@
 																<div class="image_wrapper">
 																	<div class="image_outside">
 																		<div class="image_centerbox">
-																			<th:block th:if="${session.client.client_id} == ${product.product_seller.client_id}">
+																			<th:block th:if="${session.client.client_id} == ${product.product_seller_client_id}">
 																				<button class="modifybutton"> 
 																				<img class="modifyimg" th:src="@{/img/modify.png}" th:onclick="|location.href='@{productModify(product_no=${product.product_no})}'|">
 																				</button>
