--- a/src/main/resources/templates/salesList.html
+++ b/src/main/resources/templates/salesList.html
@@ -55,6 +55,7 @@
 																<div class="image_wrapper">
 																	<div class="image_outside">
 																		<div class="image_centerbox">
+																			<img th:if="${product.product_status != 'ing'}" src="https://ccimage.hellomarket.com/web/2018/item/img_tag_sale_itemlist_card_soldout_x4.png" class="thumbnail_state_img" alt="판매완료" th:onclick="|location.href='@{product_detail(product_no=${product.product_no})}'|">	
 																			<img th:src="@{/img/} + ${product.product_img1 }" th:onclick="|location.href='@{product_detail(product_no=${product.product_no})}'|"
 																				class="thumbnail_img" alt="${product.product_name }">
 																		</div>
