2022 03 04 17:19 [Seach 기능 구현]

--- a/src/main/resources/static/css/detail.css
+++ b/src/main/resources/static/css/detail.css
@@ -231,3 +231,8 @@ div.gradient-wrap {
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
 }
+.product_info {
+	font-size: 20px;
+    font-weight: 700;
+    color: #000;
+}
