--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -14,7 +14,7 @@
 	<div style="display: flex;">
 		</div>
 		<hr>
-			<div class="info">
+			<div class="info_">
 			<ul class="info_list">
 			<li>
 				<dl>
